<resources>
    <string name="app_name">功能集合</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="load_more_text">加载更多</string>
    <string name="friend_trend">好友动态</string>
    <string name="hot_content">热门内容</string>
    <string name="recommend_custom">推荐用户</string>
    <string name="join_custom">已参与用户</string>
    <string name="sign_up">报名</string>
    <string name="look_more">查看\n更多</string>
    <string name="topic">话题</string>
    <string name="hot_topic">热门话题</string>
    <string name="recommended_users">推荐用户</string>
    <string name="all_topic_list">全部话题</string>
    <string name="check_morn">查看更多</string>
    <string name="myaccount_login_username_tip">手机号</string>
    <string name="forget_pwd_label">忘记密码</string>
    <string name="myaccount_login_action_register1">注册</string>
    <string name="login_name">登录</string>
    <string name="login_tips">使用以下帐户登录</string>
    <string name="look_more_">查看更多</string>
    <string name="friend_trends">好友动态</string>
    <string name="news">最新动态</string>
    <string name="add_follow">+ 关注</string>
    <string name="add_follow_topic">+ 关注话题</string>
    <string name="follow_">关注</string>
    <string name="put_questions">提问</string>
    <string name="all_put_questions">全部提问</string>
    <string name="relative_topic">相关话题</string>
    <string name="msg">消息</string>
    <string name="follow">关注</string>
    <string name="add_img_info">添加能表达话题含义的图片（选填）</string>
    <string name="creat_topic">创建话题</string>
    <string name="topic_miaosu">话题描述</string>
    <string name="topic_img">话题封面</string>
    <string name="create_question">提问</string>
    <string name="choice_topic">选择话题</string>
    <string name="question_miaosu">问题描述</string>
    <string name="create_des">添加话题描述（选填）</string>
    <string name="create_title">话题名称，限10字。</string>
    <string name="create_title_length">话题名称不能超过10个字</string>
    <string name="create_ques_length">问题描述不能超过300个字</string>
    <string name="create_title_null">请输入标题</string>
    <string name="create_des_length">描述不能超过100字</string>
    <string name="question_name">输入提问，限100字</string>
    <string name="question_des">添加问题描述（选填）</string>
    <string name="release">发布</string>
    <string name="search_topic">搜索话题</string>
    <string name="search_no_topic">没有找到您搜索的话题</string>
    <string name="create_one">创建一个</string>
    <string name="my_activity">我的活动</string>
    <string name="shaomao_activity">扫码二维码</string>
    <string name="kecheng_activity">我的课程</string>
    <string name="kecheng_details">课程详情</string>
    <string name="base_project">项目基本信息</string>
    <string name="peixun_project"> * 培训项目</string>
    <string name="informantion_people">申请人信息</string>
    <string name="id_type">* 身份类别</string>
    <string name="id_name">* 姓名</string>
    <string name="id_sex">* 性别</string>
    <string name="id_addres">*籍贯</string>
    <string name="id_addres2">*身份类型</string>
    <string name="id_addres3">*证件类型</string>
    <string name="id_home">* 民族</string>
    <string name="id_group">* 出生日期</string>
    <string name="id_number">* 身份证号码</string>
    <string name="id_school">* 学历</string>
    <string name="studyzijin">紫荆谷训练营</string>
    <string name="zhaosheng">招生简章</string>
    <string name="base_info">基本信息</string>
    <string name="honner_info">荣誉和奖励</string>
    <string name="contact_names">联系方式</string>
    <string name="contact_phone">* 手机号码</string>
    <string name="contact_email">* 电子邮箱</string>
    <string name="contact_compay">* 公司/学校名称</string>
    <string name="contact_address">* 联系地址</string>
    <string name="contact_sos_people">* 紧急联系人</string>
    <string name="contact_sos_phone">* 紧急联系电话</string>
    <string name="contact_selector">请选择</string>
    <string name="education_bankground_main">教育背景</string>
    <string name="education_bankground">教育背景（和最高学历对应的教育经历）</string>
    <string name="education_school">* 毕业院校</string>
    <string name="education_zhuanye">* 专业</string>
    <string name="education_country">* 国家/地区</string>
    <string name="work_process">工作履历（最多填写三项）</string>
    <string name="work_compay">公司:</string>
    <string name="work_position">职位: </string>
    <string name="work_duty">主要职责: </string>
    <string name="my_save">我的收藏</string>
    <string name="my_wish">我的关注</string>
    <string name="my_create">我的创作</string>
    <string name="my_news">紫荆谷新闻</string>
    <string name="my_set">设置</string>
    <string name="question_callback">问题反馈</string>
    <string name="register">注册账号</string>
    <string name="helpdetails">用户协议</string>
    <string name="register2">输入手机号</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="sendcode">发送验证码</string>
    <string name="next">下一步</string>
    <string name="setpwd">设置密码</string>
    <string name="pwd">密码</string>
    <string name="newpwd">新密码&#160;&#160;&#160;&#160;</string>
    <string name="surepwd">确认密码</string>
    <string name="setnewpw">设置密码</string>
    <string name="next_work">新增工作履历</string>
    <string name="next_sub">新增</string>
    <string name="process_work">工作经历</string>
    <string name="baoming_work">报名申请</string>
    <string name="complet">完成</string>
    <string name="active_users">活跃用户</string>
    <string name="attention_issues">关注问题</string>
    <string name="question_attentioned">关注的问题</string>
    <string name="question_ask">的提问</string>
    <string name="answer">的回答</string>
    <string name="answering_issues">回答问题</string>
    <string name="banding">绑定手机号</string>
    <string name="bandinguser">账号绑定</string>
    <string name="verficon">验证手机号</string>
    <string name="get_bind">有绑定</string>
    <string name="no_bind">去绑定</string>
    <string name="qq">QQ</string>
    <string name="qq_qzone">QQ空间</string>
    <string name="weixin">微信</string>
    <string name="jubao">举报</string>
    <string name="friend">朋友圈</string>
    <string name="qqhome">QQ空间</string>
    <string name="moments">朋友圈</string>
    <string name="new_pwd">设置新密码</string>
    <string name="new_pwd1">重设密码</string>
    <string name="seting">设置</string>
    <string name="mycount">手机号</string>
    <string name="upatepwd">修改密码</string>
    <string name="language">语言设置</string>
    <string name="clear">清除缓存</string>
    <string name="version">版本更新</string>
    <string name="quit">退出登录</string>
    <string name="current_version">当前未绑定</string>
    <string name="new_version">当前已是最新版本</string>
    <string name="chinses">简体中文</string>
    <string name="chinses_">繁体中文</string>
    <string name="question_detail">问题详情</string>
    <string name="submit">发布</string>
    <string name="send_msg">私信</string>
    <string name="wished">已关注</string>
    <string name="customer_information">用户信息</string>
    <string name="wish_to_me">关注我的</string>
    <string name="wish_to_he">关注TA的</string>
    <string name="i_wish">我关注的</string>
    <string name="he_wish">TA关注的</string>
    <string name="agree">赞</string>
    <string name="save">收藏</string>
    <string name="his_reply">TA的回答</string>
    <string name="his_ask">TA的提问</string>
    <string name="his_question_wished">TA关注的问题</string>
    <string name="customer_information_edit">编辑用户信息</string>
    <string name="save_two">保存</string>
    <string name="edit">编辑</string>
    <string name="pet_name">昵称：</string>
    <string name="simple_describe">简介：</string>
    <string name="mycount_tips">手机号不能为空</string>
    <string name="pwd_tips">密码不能为空</string>
    <string name="active_list">活动</string>
    <string name="dongtai">好友动态</string>
    <string name="select_school">选择高校</string>
    <string name="place_select_school">请选择你的高校</string>
    <string name="school_">高校</string>
    <string name="my_create_topic">话题</string>
    <string name="my_create_ask">提问</string>
    <string name="my_create_reply">回答</string>
    <string name="my_create_no_data_hint">您还没有任何创作。</string>
    <string name="my_create_ask_no_data_hint">您还没有任何提问。</string>
    <string name="my_create_reply_no_data_hint">您还没有任何回答。</string>
    <string name="my_create_topic_no_data_hint">您还没有任何话题。</string>
    <string name="my_activity_no_data_hint">您还没有任何活动。</string>
    <string name="he_has_no_reply_hint">TA还没有任何回答</string>
    <string name="he_has_no_ask_hint">TA还没有任何提问</string>
    <string name="he_has_no_followed_question_hint">TA还没有任何关注的问题</string>
    <string name="my_save_no_data_hint">您还没有任何收藏。</string>
    <string name="my_wish_no_data_hint">您还没有任何关注。</string>
    <string name="my_wish_topic_no_data_hint">您还没有关注任何话题。</string>
    <string name="my_wish_customer_no_data_hint">您还没有关注任何用户。</string>
    <string name="my_wish_ask_no_data_hint">您还没有关注任何提问。</string>
    <string name="my_wish_activity_no_data_hint">您还没有关注任何活动。</string>
    <string name="go_to_ask">去提问</string>
    <string name="go_to_reply">去回答</string>
    <string name="my_follow_customer">用户</string>
    <string name="my_follow_activity">活动</string>
    <string name="my_kecheng_activity">课程</string>
    <string name="advert">广告</string>
    <string name="select">精选</string>
    <string name="froms">来自</string>
    <string name="tos">创投新闻</string>
    <string name="types">类别</string>
    <string name="authentica">用户认证</string>
    <string name="new_detail">新闻详情</string>
    <string name="people_sign">人报名</string>
    <string name="people_have_sign">人已报名</string>
    <string name="people_follow">人关注</string>
    <string name="active_details">活动详情</string>
    <string name="athen_details">认证信息</string>
    <string name="jijiao">提交申请</string>
    <string name="have">已有</string>
    <string name="have_sign">已报名</string>
    <string name="active_induce">活动介绍：</string>
    <string name="sponsor">举办方：</string>
    <string name="guest">嘉宾：</string>
    <string name="active_time">活动时间：</string>
    <string name="active_area">活动地点：</string>
    <string name="start_enoll">开始报名</string>
    <string name="enroll_finish">报名已结束</string>
    <string name="shao_one">感谢您到场参与紫荆谷培训课程！</string>
    <string name="shao_two">抱歉！您没有参与该课程的资格，\n请联系现场工作人员处理。</string>
    <string name="active_finish">活动已结束</string>
    <string name="active_no_start">活动未开始</string>
    <string name="enolling">正在报名</string>
    <string name="enolling_no_start">报名未开始</string>
    <string name="enolling_have_finish">报名已结束</string>
    <string name="activing">活动进行中</string>
    <string name="end">结束</string>
    <string name="enoll">报名</string>
    <string name="start_time">开始时间：</string>
    <string name="delete">删除</string>
    <string name="report">举报</string>
    <string name="reply_comment">回复评论</string>
    <string name="comment">评论</string>
    <string name="teacher_authentication">导师认证</string>
    <string name="student_authentication">学员认证</string>
    <string name="name">姓名</string>
    <string name="school">高校</string>
    <string name="position">职称</string>
    <string name="education">教育经历（必填）</string>
    <string name="major">专业</string>
    <string name="company">公司</string>
    <string name="wanshaniffo">完善个人资料后，可以报名\n请先完善个人资料。</string>
    <string name="company_position">职位</string>
    <string name="job">公司信息</string>
    <string name="confirm">确定</string>
    <string name="my_follow">我的关注</string>
    <string name="i_attend">我参与的</string>
    <string name="all_activities">所有活动</string>
    <string name="cancel">取消</string>
    <string name="cancel2">暂不</string>
    <string name="towanshan">去完善</string>
    <string name="sign_up_end">截止报名</string>
    <string name="put_question_num">%1$s提问</string>
    <string name="follow_num">%1$s关注</string>
    <string name="answer_num">回答 %1$s</string>
    <string name="fabulous_num">赞 %1$s</string>
    <string name="fabulous_num_">%1$s赞</string>
    <string name="comment_num">%1$s评论</string>
    <string name="collect_num">%1$s收藏</string>
    <string name="topic_from_name">#%1$s#</string>
    <string name="answer_question">回答了问题</string>
    <string name="one_concern">个关注</string>
</resources>