<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent70">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/share_pop_advert_img"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_pics" />

        <ImageView
            android:id="@+id/share_pop_close_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="9.9dp"
            android:layout_marginTop="7.1dp"
            android:src="@mipmap/cross" />

        <LinearLayout
            android:id="@+id/share_pop_edit_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="31.9dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/share_pop_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableTop="@mipmap/pop_icon_edit"
                    android:gravity="center_horizontal"
                    android:text="@string/edit"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/share_pop_delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="86dp"
                    android:drawablePadding="10dp"
                    android:drawableTop="@mipmap/pop_icon_del"
                    android:gravity="center_horizontal"
                    android:text="@string/delete"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/dotted_line"
                android:layerType="software" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="42.1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/share_pop_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/pop_shareicon_qq"
                    android:gravity="center_horizontal"
                    android:text="@string/qq"
                    android:textColor="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_pop_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/pop_shareicon_wechat"
                    android:gravity="center_horizontal"
                    android:text="@string/weixin"
                    android:textColor="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_pop_moments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/pop_shareicon_friends"
                    android:gravity="center_horizontal"
                    android:text="@string/moments"
                    android:textColor="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_pop_qzone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/pop_shareicon_qzone"
                    android:gravity="center_horizontal"
                    android:text="@string/qq_qzone"
                    android:textColor="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_pop_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/pop_shareicon_report"
                    android:gravity="center_horizontal"
                    android:text="@string/report"
                    android:textColor="@color/color_666666"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>